@@ -32,7 +32,7 @@ extract($t);
         ?>
  <tr>
   <td class="bottomSend">
-   <input type="submit" name="send" value="<?php echo _("Send"); ?>" />
+   <input type="submit" name="<?php echo unique_widget_name('send'); ?>" value="<?php echo _("Send"); ?>" />
   </td>
  </tr>
         <?php
@@ -40,3 +40,4 @@ extract($t);
  ?>
 </table>
 </div>
+<input type="hidden" name="send_button_count" value="<?php echo unique_widget_name('send', TRUE); ?>" />
